[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veraxis-memory-admissibility"
version = "0.1.0"
description = "Python edge adapter for Veraxis Admissible Memory Management"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60",
  "protobuf>=4.25"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["veraxis*"]
